# KroxAI-mini

./: .gitignore  INSTALL.md  MANIFEST.in  PACKAGE_MIGRATION.md  QUICKSTART.md  README.md  agent_out.py  dpo_simple.py  eval_harness.py  index.html  invoice_send.py  kroxai-mini.yml  prompts.jsonl  pyproject.toml  test_install.py  train.py
.github/workflows/: release.yml
examples/: README.md  chat.py  dpo_simple.py  server.py  torch_train.py  train.py
src/kroxai_mini/: __init__.py  agent_protocol.py  ce_reranker.py  transformer.py
